--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -15,4 +15,12 @@
 p {
     color: white;
     align-items: flex-end;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+@media (max-width: 767px) {
+    p {
+        font-size: 12px;
+    }
 }
