--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -1,17 +1,21 @@
-.banner{
+.banner-home,
+.banner-about {
     height: 223px;
-    margin-bottom: auto;
     display: flex;
     margin-bottom: 43px;
+    position: relative;
 }
 
-.banner-container{
-    width: 90%;
-    height: 223px;
+.banner-container {
+    width: 100%;
     position: absolute;
+    height: 223px;
+    display: flex;
+    align-items: center;
 }
 
-.banner-image{
+.banner-image,
+.banner-container-about {
     width: 100%;
     height: 100%;
     border-radius: 25px;
@@ -19,13 +23,36 @@
     filter: brightness(70%);
 }
 
-.banner-title{
+.banner-title {
     color: white;
     text-align: center;
     font-size: 48px;
     font-weight: 500;
     width: 100%;
-    height: 70px;
-    margin-top: 77.5px;
-    margin-bottom: 77.5px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width: 767px) {
+    .banner-home {
+        height: 111px;
+        margin-bottom: 22px;
+    }
+
+    .banner-container {
+        height: 111px;
+    }
+
+    .banner-title {
+        font-size: 24px;
+        display: flex;
+        justify-content: left;
+        margin-left: 16px;
+    }
+
+    .banner-about {
+        margin-bottom: 20px;
+    }
 }
