--- a/src/pages/Error/style.css
+++ b/src/pages/Error/style.css
@@ -28,5 +28,19 @@
     justify-content: center;
     text-decoration: underline;
     margin-top: 180px;
-    margin-bottom: 150px;
+    margin-bottom: 180px;
+}
+
+@media (max-width: 767px) {
+    .error404 {
+        font-size: 96px;
+    }
+
+    .message-error{
+        font-size: 18px;
+    }
+
+    .link {
+        margin-bottom: 230px;
+    }
 }
