--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,10 @@ main {
     margin-left: 5%;
     margin-right: 5%;
 }
+
+@media (max-width: 767px) {
+    main {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
