--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -14,8 +14,7 @@
     align-items: center;
 }
 
-.banner-image,
-.banner-container-about {
+.banner-image {
     width: 100%;
     height: 100%;
     border-radius: 25px;
@@ -37,12 +36,8 @@
 
 @media (max-width: 767px) {
     .banner-home {
-        height: 111px;
-        margin-bottom: 22px;
-    }
-
-    .banner-container {
-        height: 111px;
+        height: 111px !important;
+        margin-bottom: 20px;
     }
 
     .banner-title {
