--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,9 @@ body {
 main {
     margin-left: 5%;
     margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
 }
 
 @media (max-width: 767px) {
