--- a/src/components/Rating/style.css
+++ b/src/components/Rating/style.css
@@ -1,11 +1,11 @@
-.ratingStar {
+.rating-star {
     height: 24px;
     margin-right: 15px;
     margin-top: 27px;
 }
 
 @media (max-width: 767px) {
-    .ratingStar {
+    .rating-star {
         height: 13px;
         margin-right: 10px;
         margin-top: 0;
