--- a/src/pages/Housing/style.css
+++ b/src/pages/Housing/style.css
@@ -120,6 +120,7 @@
         flex-direction: row-reverse;
         align-items: center;
         margin-top: 0;
+        margin-bottom: 16px;
         justify-content: space-between;
     }
 
